app/assets/stylesheets/scaffolds.css.scss
$light-blue: #CEF0FF;
$med-blue: #7c9aae;
$dark-blue: #18204C;
$dark-green: #327c24;
$label-color: #ccc;
$light-grey: #fafafa;

// layout and general //-----------------------------------------

body {
  background: url(/assets/background/linen-tile-medium.png) #888;
  color: #888; 
  font-family: Arial,"Helvetica Neue",sans-serif;
  word-wrap: break-word; 
  position:relative;
}


h1, h2, h3, h4, h5{
  background: url("/assets/background/linen-tile-trans.png") repeat scroll right top #F8F8F8;
  border-bottom: 1px solid #FFFFFF;
  border-top: 1px solid #CCCCCC;
  color: #666666;
  font-family: "minion-pro-1","minion-pro-2",Georgia,"Times New Roman",serif;
  font-style: normal;
  font-weight: 500;
  letter-spacing: -1px;
  line-height: 1.1em;
  margin: 20px 0 10px 0;
}

h3{
  line-height:1.7em;
  padding:0 2px 0 0;
}

select,
textarea,
input[type="text"],
input[type="password"],
input[type="datetime"],
input[type="datetime-local"],
input[type="date"],
input[type="month"],
input[type="time"],
input[type="week"],
input[type="number"],
input[type="email"],
input[type="url"],
input[type="search"],
input[type="tel"],
input[type="color"],
.uneditable-input {
  height: 26px;
}

#content-main{
  background: #ffffff url("/assets/background/linen-tile-trans.png"); 
}

#content-wrapper{
  background:url('/assets/background/forest-trail-transparent.png') no-repeat scroll bottom right $light-blue;
  border-radius: 10px;
  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.5);
  padding: 3px;
}

@media (max-width: 767px){
}

@media (min-width: 768px) and (max-width: 979px) {
  #content-wrapper{
    padding:3px 0;
  }
}

@media (min-width: 980px) and (max-width: 1199px) {
  #content-wrapper{
    padding:8px 0;
  }
}

@media (min-width: 1200px){
  #content-wrapper{
    padding:10px 0;
  }
}

#content-header{
   background: url("/assets/background/wide-gloss.png") no-repeat scroll center top;
}

#footer, #header{
	position:relative;
	width: 960px;
	margin:8px auto;
	border-radius: 10px;
	color: #bbb;
}

#footer a, #header a{
    color:$light-blue;
}

#logo{
	width: 200px;
	margin:0 auto;
	background: url(/assets/educentives.png) no-repeat;
	display: inline-block;
	height: 75px;
	min-height: 75px;
	position: relative;
  float: left;
}

p, ol, ul, td {
  font-family: verdana, arial, helvetica, sans-serif;
  font-size: 11pt;
  line-height: 14pt; 
}

fieldset{
  border-radius: 5px;
}

.record-cntr input[type='text'], .record-cntr input[type='number'], .record-cntr input[type='password'], .record-cntr textarea, .wideform textarea, .wideform input[type='text']{ 
  width:98%;
  border: solid 1px $med-blue;
  border-radius: 4px;
  line-height:24pt;
  font-size:14pt;
  color:$med-blue;
}

fieldset textarea, .wideform textarea{
  height:60pt;
}

pre {
  background-color: #eee;
  padding: 10px;
  font-size: 12px; }

a {
  color: #64C1E6;
  &:visited {
    color: #66f; }
  &:hover {
    color: #64E6C1;
  } 
}

div {
  &.field, &.actions {
    margin-bottom: 10px; } }


.clearer{clear:both;}
    
// navigation //--------------------------------------------

a#home-link{width:200px;height:70px;display:inline-block;}
a#home-link:hover{background-color:transparent;}
#home-link span{display:none}

#authentication{
    background-color: #999;
    border: 1px solid #bbb;
    border-radius: 7px 7px 7px 7px;
    box-shadow: 0 3px 4px rgba(0, 0, 0, 0.1);
    float: right;
    margin: 8px;
    padding: 2px;
	
}

#authentication a{
	padding:8px;	
	display:inline-block;
	text-decoration:none;
}

#authentication a:first-child{
	border-right:1px solid $light-blue;
	border-radius:6px 6px 0 6px;
}
#authentication a:last-child{
	border-left:1px solid $light-blue;
	border-radius:6px 6px 6px 0;
}

nav{
	position:relative;
  opacity: .75;
}

nav ul{

	float:right;
	margin: 5px;
	padding: 0;
	width: 309px;
	list-style-type:none;
}

nav li{
    float:right;
	list-style:none;
	margin: 0;
	border: 1px solid #ccc;
	border-width:0 1px 0 1px;
	box-shadow: 0 3px 4px rgba(0, 0, 0, 0.1);
}

nav li:first-child{
	border-width:1px 1px 0 1px;
	border-radius:9px 9px 0 0;
}	

nav li:last-child{
	border-width:0 1px 1px 1px;
	border-radius:0 0 9px 9px;
}

nav a, #authentication a{
	text-align:center;
	border-width: 1px 0 0 1px;
	border-style:solid;
	border-color: white #bbb #bbb white;
	color: $dark-blue;
	background-color:$med-blue;
	background-image: -webkit-linear-gradient(top, #d3effd, #b9d2de);
	background-image:    -moz-linear-gradient(top, #d3effd, #b9d2de);
	background-image:     -ms-linear-gradient(top, #d3effd, #b9d2de);
	background-image:      -o-linear-gradient(top, #d3effd, #b9d2de);
}

nav a{
  font-size:0.9em;
  padding: 14px 8px;
  text-decoration: none;
  display:block;
  width: 309px;
	text-transform:uppercase;
	letter-spacing:0.2em;
	text-shadow:1px 1px 0 #fff;
}

nav li:first-child a{
	border-width:1px 0 0 1px;
	border-radius:8px 8px 0 0;
}	

nav li:last-child a{
	border-width:1px 0 1px 1px;
	border-radius:0 0 8px 8px;
}

nav a:visited{color: $dark-blue;}
nav a:hover, #authentication a:hover{
	background-color: #333;
	background-image: -webkit-linear-gradient(top, $light-blue, white, $light-blue, $light-blue);
	background-image:    -moz-linear-gradient(top, $light-blue, white, $light-blue, $light-blue);
	background-image:     -ms-linear-gradient(top, $light-blue, white, $light-blue, $light-blue);
	background-image:      -o-linear-gradient(top, $light-blue, white, $light-blue, $light-blue);
	color: $dark-blue;
}

// button //------------------------------------------------

.edu-button {
    margin: 10px 15px;
    
    background: -webkit-linear-gradient(top , #73B844, $dark-green) repeat scroll 0 0 $dark-green;
    background:    -moz-linear-gradient(center top , #73B844 50%, $dark-green 100%) repeat scroll 0 0 $dark-green;
    background:    -moz-linear-gradient(top , #fff, $dark-green) repeat scroll 0 0 $dark-green;
    background:     -ms-linear-gradient(center top , #73B844 50%, $dark-green 100%) repeat scroll 0 0 $dark-green;
    background:      -o-linear-gradient(center top , #73B844 50%, $dark-green 100%) repeat scroll 0 0 $dark-green;
    
    border: 3px solid #eee;
    font-size: 26px;
    padding: 8px 25px;
    border-radius: 8px;
    clear: both;
    color: #FFFFFF;
    cursor: pointer;
    display: block;
    float: right;
    font-family: Trebuchet MS,arial,sans-serif;
    font-style: normal;
    font-weight: normal;
    line-height: 1.5em;
    text-decoration: none;
    text-transform: capitalize;
    white-space: nowrap !important;
}
.edu-button.arrow-left{
    padding-left: 15px;
}

.edu-button:link, .edu-button:visited, .edu-button:active, .edu-button:hover {
    color: #FFFFFF;
}

.edu-button:hover {
    background: -moz-linear-gradient(center top , $dark-green 50%, #73B844 100%) repeat scroll 0 0 #73B844;
}
.edu-button.cancel {
    background: -moz-linear-gradient(center top , #999488 50%, #888888 100%) repeat scroll 0 0 #888888;
    border: 1px solid #888888;
}
.edu-button.cancel:hover {
    background: -moz-linear-gradient(center top , #888888 50%, #999488 100%) repeat scroll 0 0 #999488;
}


.edu-button .icon-32 {
    margin-right: 5px;
    margin-top: 4px;
}

.icon-32.arrow-white-32 {
    background-position: 0 -64px;
}

.icon-32 {
    background: url("/assets/sprites/icons-32.png") no-repeat scroll 0 0 transparent;
    display: block;
    float: left;
    height: 32px;
    margin-right: 0;
    overflow: hidden;
    text-indent: -999em;
    width: 32px;
}

.vtoggle-trigger, .help-trigger{
  display:inline-block;
  width:25px;
  height:25px;
  background:url(/assets/sprites/button-sprite-24px.png) no-repeat top left;
  span{
    display:none;
  }
  &:hover{
    background-position-y:-28px;
    background-color:transparent;
  }
}
.vtoggle-trigger.open{
  background-position-x:-28px;
}

.help-trigger{
  background-position-y:-56px;
  &:hover{
    background-position-y:-84px;
    background-color:transparent;
  }
}

h3{
  .vtoggle-trigger, .help-trigger{
    float: right;
    margin: 2px;
  }
}





// data display //-------------------------------------------

.record-cntr{
  background-color: #fff;
  border:solid 1px #ccc;
  border-radius:8px;
  padding:8px;
  margin:5px 0;
}

.record{
  padding:10px 0;
  border-bottom:1px solid #f3f3f3;
  border-top:1px solid #ffffff;
}

.record-label{
  width:120px;
  text-align:right;
  display:inline-block;
  color:$label-color;
}

.record-title{
  font-weight:bold;
  margin:3px 8px;
}

a.record-title{
  color:$med-blue;
}

.record-value{
  display:inline-block;
}
// flash notice //--------------------------------------------


.flash_notice{
	border: 2px solid red;
	border-radius:8px;
	text-align: center;
	margin: 10px;
	padding: 5px 20px;
	color: green;
	font-size:1.2em;
	display: inline-block;
	background-color:white;
	box-shadow: 2px 2px 5px #888;
}


#notice {
  color: green; }


.field_with_errors {
  padding: 2px;
  background-color: red;
  color:#fff;
  padding:2px;
}

.field div:first-child .field_with_errors{ 
  border-radius:5px 5px 0 0;
  padding:5px 2px 2px 5px;
}
  
.field div:last-child .field_with_errors{ border-radius:0 0 5px 5px;}


.errorExplanation h2{
  font-size:1.2em;
  color:red;
}

#error_explanation {
  width: 450px;
  border: 2px solid red;
  border-radius:5px;
  padding: 7px;
  padding-bottom: 0;
  margin-bottom: 20px;
  background-color: #f0f0f0;
  h2 {
    text-align: left;
    font-weight: bold;
    padding: 5px 5px 5px 15px;
    font-size: 12pt;
    margin: -7px;
    margin-bottom: 0px;
    background-color: #c00;
    color: #fff; 
    border-top: 1px solid #800000;
    border-left: 1px solid #800000;
    border-radius:3px 3px 0;
    font-family:helvetica;
  }
  ul li {
    font-size: 12pt;
    list-style: square; } }

table.meta-data{
  width:300px;
  td, th{
    padding:5px;
    margin:1px;
    background-color:#eeeeee;
  }
  td{
    border-top: solid 1px $med-blue;
    background-color:$light-blue;
  } 

  tr:first-child{
    td:first-child, th:first-child {
      -moz-border-radius-topleft:6px;
      -webkit-border-top-left-radius:6px;
      border-top-left-radius:6px;
    }
    td:last-child, th:last-child {
      -moz-border-radius-topright:6px;
      -webkit-border-top-right-radius:6px;
      border-top-right-radius:6px;
    }
  }
  tr:last-child{
    td:first-child, th:first-child {
      -moz-border-radius-bottomleft:6px;
      -webkit-border-bottom-left-radius:6px;
      border-bottom-left-radius:6px;
    }
    td:last-child, th:last-child {
      -moz-border-radius-bottomright:6px;
      -webkit-border-bottom-right-radius:6px;
      border-bottom-right-radius:6px;
    }
  }

}


.mnemonic-list li:first-letter{
  font-size:120%;
  color:$dark-blue;

}
.indent{margin-left:5em;}

// statuses -------------
.todo{background-color:$light-grey}
.completed{background-color:#eeffee;}

